--- a/createAccount.html
+++ b/createAccount.html
@@ -43,8 +43,8 @@
 					console.log('Signed in as: ' + xhr.responseText);
 				};
 
-					xhr.send('idtoken=' + id_token + '&username=' + document.getElementById("createForm").elements[0].value + '&school=' + getOption("school") + '&grade=' + getOption("grade");
-				}
+				xhr.send('idtoken=' + id_token + '&username=' + document.getElementById("createForm").elements[0].value + '&school=' + getOption("school") + '&grade=' + getOption("grade"));
+			}
 		</script>
   </body>
 </html>
