--- a/login.html
+++ b/login.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <title>Qustion Connection
+			<link rel="icon" type="image/png" href="https://schoolathome.theohalpern.repl.co/favicon.png" />
+		</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
@@ -13,7 +15,7 @@
 			<meta name="google-signin-client_id" content="985596922523-tr74rdm03hj1mh6tg2hpmnirvcrm4v14.apps.googleusercontent.com">
 			
 		</div>
-		<a id="cA" href="https://schoolathome.theohalpern.repl.co/createAccount">Creat an Account</a>
+		<a id="cA" href="https://schoolathome.theohalpern.repl.co/createAccount">Create an Account</a>
 		<div> login with Google (only option)<div id="mainGSignIn" class="g-signin2" data-onsuccess="onSignIn"></div></div>
     <script src="script.js"></script>
   </body>
