--- a/signout.html
+++ b/signout.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <title>Qustion Connection
+			<link rel="icon" type="image/png" href="https://schoolathome.theohalpern.repl.co/favicon.png" />
+		</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
